# ais-listing

./: README.md  SETUP_COMPLETE.md  analyze_listing.py  env.example  pyproject.toml  results.json  test_setup.py
.cursor/rules/: use-venv.mdc
data/: listing_1.txt  sample_listings.csv
data/vector_store/: chroma.sqlite3
docs/: chunking_guide.md  extraction_guide.md
notebooks/: 01_basic_analysis.ipynb
reports/: chunking_comparison.md  extracting_report.md  extraction_results.json  test_extraction.py
src/ais_listing/: __init__.py  analyzer.py  chunking.py  cli.py  embeddings.py  extracting.py  preprocessor.py  vector_store.py
